# MockInterview

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod
cmd/app/: main.go
idl/exec/: BUILD.bazel  exec.proto
idl/users/: BUILD.bazel  auth.proto  users.proto
internal/controller/: user_controller.go
internal/data/: database.go  user_repository.go
internal/models/: user.go
internal/service/: user_service.go
scripts/: names.py  names.txt  stresstext.sh
src/cmd/exec/: BUILD.bazel  main.go
src/cmd/server/: BUILD.bazel  main.go
src/config/: BUILD.bazel  db.go  docker.go
src/controller/: BUILD.bazel  auth.go  exec.go
src/handler/: BUILD.bazel  auth.go  exec.go
src/interceptors/: BUILD.bazel  jwt_interceptor.go
src/models/: BUILD.bazel  user.go  uuid_base.go
src/proto/: BUILD.bazel  auth.pb.go  auth_grpc.pb.go  exec.pb.go  exec_grpc.pb.go
src/repository/: BUILD.bazel  user.go
src/sandbox/: BUILD.bazel  pool.go
test/: package-lock.json
test/src/webrtc-firebase-demo/: .firebaserc  firebase.json  index.html  main.js  package-lock.json  package.json
test/src/webrtc-firebase-demo/.firebase/: hosting.ZGlzdA.cache
