load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["db.go"],
    importpath = "go.mocker.com/src/config",
    visibility = ["//visibility:public"],
    deps = [
        "//src/models",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
    ],
)
