load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "interceptors",
    srcs = ["jwt_interceptor.go"],
    importpath = "go.mocker.com/src/interceptors",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)
