load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "user.go",
        "uuid_base.go",
    ],
    importpath = "go.mocker.com/src/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@io_gorm_gorm//:gorm",
    ],
)
