load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "proto",
    srcs = [
        "auth.pb.go",
        "auth_grpc.pb.go",
    ],
    importpath = "go.mocker.com/src/proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
