load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "go.mocker.com/src/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//src/config",
        "//src/controller",
        "//src/handler",
        "//src/interceptors",
        "//src/proto",
        "//src/repository",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
